--- a/template-vue-mgs/package.json
+++ b/template-vue-mgs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "template-vue-bridge",
+  "name": "template-vue-mgs",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,11 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "best-request": "^1.0.12",
     "vue": "^3.5.13"
   },
   "devDependencies": {
-    "@types/node": "^22.13.15",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
     "typescript": "~5.7.2",
